Technical challenge submission for the hiring process
uses redux with a custom api middleware

includes a test setup with mocha, chai, enzyme and sinon

includes a dockerfile for development use:
docker run -p 8080:80 -v `pwd`/src:/home/pokemon/src --rm $(docker build -q .)
can get you started

--- a/src/shared/styles/mixins.scss
+++ b/src/shared/styles/mixins.scss
@@ -44,3 +44,9 @@ $large-desktop-width: 1400px;
     @content;
   }
 }
+
+@mixin flex-card {
+  display: flex;
+  flex-direction: column;
+  background: $white-1 no-repeat center;
+}
