--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -34,7 +34,17 @@
 body {
   margin: 0;
   font-family: Regular;
+  font-size: $standard-size;
   background-color: $gray-6;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 *:focus {
